--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # main text of home
-name: John Doe
-bio: A Man who travels the world eating noodles
+name: Luis Serrano
+bio: Mathematician, Educator, and Machine Learning Professional
 
 # twitter summary info
-description: A blog about technology and stuff related
+description: A blog about math, machine learning, and stuff related
 
 # if it's an external image, update below for true
 # better with square images
@@ -50,21 +50,15 @@ github: mygithub
 medium: medium
 # vimeo: myvimeo
 # lanyrd: mylanyrd
-email: myemail@gmail.com
+email: luisgui.serrano@gmail.com
 
 authors:
     johndoe:
-        name: John Doe
-        bio: A Man who travels the world eating noodles
+        name: Luis Serrano
+        bio: Mathematician, Educator, and Machine Learning Professional
         external-image: false
         picture: assets/images/profile.jpg
-        twitter: johndoe
-    jamesfoster:
-        name: James Foster
-        bio: A Man who develops software with coffee
-        external-image: false
-        picture: assets/images/james.jpg
-        twitter: jamesfoster
+        twitter: luis_likes_math
 
 # do you want a larger site? change the option below
 # options: [normal, large] | default: normal
